// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YoutubeVideo should match init snapshot 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <YoutubeVideo
    googleDeveloperKey="googledevkey"
    hasImageProxy={false}
    link="https://www.youtube.com/watch?v=xqCoNej8Zxo"
    metadata={
      Object {
        "images": Array [
          Object {
            "secure_url": "linkForThumbnail",
            "url": "linkForThumbnail",
          },
        ],
        "title": "Youtube title",
      }
    }
    postId="post_id_1"
    show={true}
    youtubeReferrerPolicy={false}
  >
    <div
      className="post__embed-container"
    >
      <div>
        <h4>
          <span
            className="video-type"
          >
            YouTube - 
          </span>
          <span
            className="video-title"
          >
            <ForwardRef
              href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
              location="youtube_video"
            >
              <a
                href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
                location="youtube_video"
                onClick={[Function]}
                rel="noopener noreferrer"
                target="_blank"
              >
                Youtube title
              </a>
            </ForwardRef>
          </span>
        </h4>
        <div
          className="video-div embed-responsive-item"
          onClick={[Function]}
        >
          <div
            className="embed-responsive video-div__placeholder"
          >
            <div
              className="video-thumbnail__container"
            >
              <Connect(Component)
                src="linkForThumbnail"
              >
                <Memo(ExternalImage)
                  dispatch={[Function]}
                  enableSVGs={false}
                  hasImageProxy={false}
                  src="linkForThumbnail"
                >
                  <img
                    alt="youtube video thumbnail"
                    className="video-thumbnail"
                    src="linkForThumbnail"
                  />
                </Memo(ExternalImage)>
              </Connect(Component)>
              <div
                className="block"
              >
                <span
                  className="play-button"
                >
                  <span />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </YoutubeVideo>
</Provider>
`;

exports[`YoutubeVideo should match snapshot for playing state 1`] = `
<div
  className="post__embed-container"
>
  <div>
    <h4>
      <span
        className="video-type"
      >
        YouTube - 
      </span>
      <span
        className="video-title"
      >
        <ForwardRef
          href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
          location="youtube_video"
        >
          Youtube title
        </ForwardRef>
      </span>
    </h4>
    <div
      className="video-div embed-responsive-item"
      onClick={[Function]}
    >
      <iframe
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
        allowFullScreen={true}
        frameBorder="0"
        height="360px"
        referrerPolicy="no-referrer"
        sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"
        src="https://www.youtube.com/embed/xqCoNej8Zxo?autoplay=1&autohide=1&border=0&wmode=opaque&fs=1&enablejsapi=1"
        title="Youtube title"
        width="480px"
      />
    </div>
  </div>
</div>
`;

exports[`YoutubeVideo should match snapshot for playing state and \`youtubeReferrerPolicy = true\` 1`] = `
<div
  className="post__embed-container"
>
  <div>
    <h4>
      <span
        className="video-type"
      >
        YouTube - 
      </span>
      <span
        className="video-title"
      >
        <ForwardRef
          href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
          location="youtube_video"
        >
          Youtube title
        </ForwardRef>
      </span>
    </h4>
    <div
      className="video-div embed-responsive-item"
      onClick={[Function]}
    >
      <iframe
        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
        allowFullScreen={true}
        frameBorder="0"
        height="360px"
        referrerPolicy="strict-origin-when-cross-origin"
        sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"
        src="https://www.youtube.com/embed/xqCoNej8Zxo?autoplay=1&autohide=1&border=0&wmode=opaque&fs=1&enablejsapi=1"
        title="Youtube title"
        width="480px"
      />
    </div>
  </div>
</div>
`;
